# Whisper-local

./: .env.example  .gitignore  README.md  api_server.py  pyproject.toml  setup.bat  setup.sh  whisper_module.py
